# cosckoya.github.io

./: .claudeignore  .codespellrc  .editorconfig  .gitignore  .gitlab-ci.yml  .opencodeignore  .pre-commit-config.yaml  .yamllint  .yamllint.yml  .yamllintrc  404.html  AGENTS.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_VISUAL.md  CLAUDE.md  CONTRIBUTING.md  MIGRATION_PLAN.md  Makefile  PROJECT_AUDIT_REPORT.md  README.md  README_REFACTOR.md  REFACTOR_EXECUTIVE_SUMMARY.md  TEMPLATE.md  cleanup_obsolete_files.sh  index.html  mkdocs.yml  opencode.json  oracledb-cli.py  pip-update.lst  pyproject.toml  requirements-lock.txt  requirements.txt  sitemap.xml  tags.json  zensical.toml
.claude/: AUDIT_REPORT.md  settings.json  settings.local.json
.claude/rules/: deployment.md  documentation.md  git-workflow.md
.claude/skills/: README.md
.github/: dependabot.yml
.github/workflows/: gh-pages.yml
1337/SUMMARY/: index.html
1337/appsec.1337/: index.html
1337/defensive-security.1337/: index.html
1337/grc.1337/: index.html
1337/infra-cloud-security.1337/: index.html
1337/intelligence-research.1337/: index.html
1337/learning-path.1337/: index.html
1337/offensive-security.1337/: index.html
1337/purple-team.1337/: index.html
1337/specialized.1337/: index.html
SUMMARY/: index.html
ai/SUMMARY/: index.html
ai/aws-bedrock.ai/: index.html
ai/azure-ai-foundry.ai/: index.html
ai/microsoft-copilot-studio.ai/: index.html
ai/vertex-ai.ai/: index.html
api/SUMMARY/: index.html
api/docker-hub.service/: index.html
api/github-rest-api.service/: index.html
assets/javascripts/: bundle.79ae519e.min.js
awesome/SUMMARY/: index.html
awesome/sword-and-sorcery/: index.html
cloud/: index.html
cloud/SUMMARY/: index.html
cloud/aws.cloud/: index.html
cloud/azure.cloud/: index.html
cloud/google-cloud.cloud/: index.html
code/SUMMARY/: index.html
code/go.lang/: index.html
code/python/: index.html
code/python.lang/: index.html
code/shell/: index.html
containers/: index.html
containers/SUMMARY/: index.html
containers/docker.tool/: index.html
containers/kubernetes.tool/: index.html
databases/SUMMARY/: index.html
databases/postgresql.database/: index.html
docs/: SUMMARY.md  bookmarks.md  index.md  robots.txt  showcase.md  test-icons.md
docs/1337/: SUMMARY.md  appsec.1337.md  defensive-security.1337.md  grc.1337.md  infra-cloud-security.1337.md  intelligence-research.1337.md  learning-path.1337.md  offensive-security.1337.md  purple-team.1337.md  security-fundamentals.1337.md  specialized.1337.md
docs/ai/: SUMMARY.md  aws-bedrock.ai.md  azure-ai-foundry.ai.md  microsoft-copilot-studio.ai.md  vertex-ai.ai.md
docs/api/: SUMMARY.md  docker-hub.service.md  github-rest-api.service.md
docs/artificial-intelligence/: SUMMARY.md  index.md
docs/awesome/: SUMMARY.md  sword-and-sorcery.md
docs/cloud/: SUMMARY.md  aws-architecture.explanation.md  aws-learning-path.howto.md  aws.cloud.md  aws.md  azure.cloud.md  cloud-platforms.md  cloud-security.md  finops.md  google-cloud.cloud.md  index.md  terraform.md
docs/code/: SUMMARY.md  go.lang.md  index.md  nodejs.lang.md  pip.md  python.lang.md  python.md  shell.md
docs/containerization/: SUMMARY.md  container-security.md  docker.md  helm.md  index.md  kubernetes.md
docs/containers/: SUMMARY.md  docker.tool.md  index.md  kubernetes.tool.md
docs/cybersecurity/: SUMMARY.md  index.md
docs/databases/: SUMMARY.md  postgresql.database.md
docs/devops/: SUMMARY.md  aiml-operations.md  ansible.md  azure-devops.md  cicd.md  claude-code.md  github-actions.md  github.md  gitops.md  index.md  pre-commit.md
docs/devsecops/: SUMMARY.md  git.md
docs/linux/: SUMMARY.md  index.md
docs/monitoring/: SUMMARY.md  prometheus.md
docs/os/: SUMMARY.md  linux.os.md  macos.os.md  windows.os.md
docs/sample/: SUMMARY.md  index.md
docs/security/: SUMMARY.md  index.md  learn.md  tools.md
docs/stylesheets/: snape.css
docs/sysadmin/: SUMMARY.md  databases.md  index.md  linux.md
docs/templates/: README.md  page.template.md  tech-reference.template.md  tool-reference.template.md
docs/toolbox/: SUMMARY.md  asdf.tool.md  index.md  kitty.tool.md  mise.tool.md  neovim.tool.md  tmux.tool.md  (+1 more)
info/: README.md  SKILLS_GUIDE.md
monitoring/: index.html
scripts/: README.md  ci-canary.sh  create-structure.sh  docmaster-tools.sh  health.py  janitor.sh  migrate-monitoring.sh  test-build.sh  validate-links.sh
search/: search_index.json
security/: index.html
showcase/: index.html
sysadmin/: index.html
templates/: README.md  page.template.md  tech-reference.template.md  tool-reference.template.md
(+131 files in other folders)
