[project]
name = "cosckoya-docs"
version = "2.0.0"
description = "Cosckoya's Tech Toolbox - Personal technical documentation site"
readme = "CLAUDE.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "cosckoya", email = "roy.batty@users.noreply.github.com" }
]
keywords = [
    "documentation",
    "mkdocs",
    "mkdocs-material",
    "technical-writing",
    "devops",
    "sysadmin",
    "cloud",
    "security"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies for documentation site
dependencies = [
    # Core MkDocs
    "mkdocs>=1.6.1,<2.0.0",
    "mkdocs-material>=9.7.0,<10.0.0",
    "mkdocs-material-extensions>=1.3.1,<2.0.0",

    # MkDocs Plugins
    "mkdocs-literate-nav>=0.6.2,<1.0.0",
    "mkdocs-minify-plugin>=0.8.0,<1.0.0",
    "mkdocs-same-dir>=0.1.3,<1.0.0",
    "mkdocs-section-index>=0.3.9,<1.0.0",

    # Markdown Extensions
    "pymdown-extensions>=10.19.1,<11.0.0",
    "Markdown>=3.6,<4.0.0",

    # Core Dependencies
    "Jinja2>=3.1.4,<4.0.0",
    "Babel>=2.17.0,<3.0.0",
    "PyYAML>=6.0.1,<7.0.0",
    "python-dateutil>=2.9.0,<3.0.0",
    "Pygments>=2.18.0,<3.0.0",
    "requests>=2.32.3,<3.0.0",

    # Build and Deployment
    "ghp-import>=2.1.0,<3.0.0",
    "watchdog>=4.0.1,<5.0.0",

    # Utilities
    "click>=8.1.7,<9.0.0",
    "packaging>=24.1,<25.0.0",
    "colorama>=0.4.6,<1.0.0",
    "pathspec>=0.12.1,<1.0.0",
    "platformdirs>=4.2.2,<5.0.0",

    # Security and Networking
    "certifi>=2024.12.0",
    "charset-normalizer>=3.3.2,<4.0.0",
    "urllib3>=2.2.2,<3.0.0",
    "idna>=3.7,<4.0.0",

    # Other Dependencies
    "MarkupSafe>=2.1.5,<3.0.0",
    "mergedeep>=1.3.4,<2.0.0",
    "pyyaml_env_tag>=0.1,<1.0.0",
    "paginate>=0.5.6,<1.0.0",
    "regex>=2024.0.0",
    "six>=1.16.0,<2.0.0",
]

[project.optional-dependencies]
# Development tools (pre-commit, linting, formatting, security)
dev = [
    # Pre-commit framework
    "pre-commit>=4.0.0,<5.0.0",

    # Markdown formatting
    "mdformat>=0.7.19,<1.0.0",
    "mdformat-mkdocs>=2.0.0,<3.0.0",
    "mdformat-gfm>=0.3.5,<1.0.0",
    "mdformat-frontmatter>=2.0.1,<3.0.0",

    # Code quality
    "codespell>=2.4.1,<3.0.0",
    "yamllint>=1.35.1,<2.0.0",
    "ruff>=0.8.0,<1.0.0",

    # Security scanning
    "bandit[toml]>=1.8.0,<2.0.0",
]

[project.urls]
Homepage = "https://cosckoya.github.io"
Repository = "https://github.com/cosckoya/cosckoya.github.io"
Issues = "https://github.com/cosckoya/cosckoya.github.io/issues"

# Build system specification (PEP 517/518)
[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# Ruff configuration - Modern Python linter and formatter
[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

# Enable specific rule sets
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Codespell configuration
[tool.codespell]
skip = "*.min.js,*.min.css,*.lock,venv/*,.git/*"
ignore-words-list = "sur,nad,als,crate,unexpect"

# PyYAML configuration
[tool.yamllint]
extends = "default"

[tool.yamllint.rules.line-length]
max = 100

[tool.yamllint.rules.document-start]
disable = true

[tool.yamllint.rules.truthy]
allowed-values = ["true", "false", "yes", "no"]

# Bandit security linter configuration
[tool.bandit]
exclude_dirs = ["tests", "venv", "site", ".git"]
skips = ["B101"]  # Allow assert statements (used in tests)

# MkDocs-specific tooling
[tool.mkdocs]
strict = true
site_dir = "site"

# Project metadata for documentation
[tool.cosckoya-docs]
version = "2.0.0"
mkdocs-material-version = "9.7.0+"
python-version = "3.12.3"
last-modernized = "2026-01-26"
architecture = "literate-navigation"
sections = [
    "sysadmin",
    "cloud",
    "devops",
    "containerization",
    "hack",
    "tools"
]
